--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -3,4 +3,5 @@
     margin-top: 10px;
     border-radius: 10px;
     font-family: 'Roboto', sans-serif;
+    color: black;
 }
